--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile 'commons-httpclient:commons-httpclient:3.1'
     testCompile 'junit:junit:4.12'
 }
 
