--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,18 @@ buildscript {
     ext.kotlin_version = '1.2.41'
 
     repositories {
+        jcenter()
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
-apply plugin: 'application'
-
-mainClassName = 'com.github.shingyx.youtubedlgui.MainApplicationKt'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 sourceCompatibility = 1.8
 
@@ -24,7 +24,6 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile 'commons-httpclient:commons-httpclient:3.1'
-    testCompile 'junit:junit:4.12'
 }
 
 compileKotlin {
@@ -40,5 +39,11 @@ sourceSets {
             srcDirs = ["src/main/kotlin"]
             includes = ["**/*.fxml"]
         }
+    }
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.github.shingyx.youtubedlgui.MainApplicationKt'
     }
 }
