--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
+test {
+    useJUnitPlatform()
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'com.github.shingyx.youtubedlgui.MainApplicationKt'
